@@ -1535,6 +1535,19 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     iP4500_channel_order
   },
+  { /* Canon PIXMA MG6200 */
+    "PIXMA MG6200", 3,          /*model, model_id*/
+    842, 17*72,       /* max paper width and height */
+    10, 10, 15, 15,    /*border_left, border_right, border_top, border_bottom */
+    &canon_PIXMA_MG5200_slotlist, /* same as MG5200 */
+    CANON_CAP_STD0|CANON_CAP_DUPLEX|CANON_CAP_px|CANON_CAP_r|CANON_CAP_I|CANON_CAP_P|CANON_CAP_XML,0x64,control_cmd_PIXMA_MG5300,  /* features */
+    &canon_PIXMA_MG6200_modelist,/* there is some ESC (r 0x68 command for CD tray also, not sure why */
+    &canon_PIXMA_MG6100_paperlist,
+    NULL,
+    NULL,
+    NULL,
+    iP4500_channel_order
+  },
   { /* Canon PIXMA MG8100 */
     "PIXMA MG8100", 3,          /*model, model_id*/
     842, 17*72,       /* max paper width and height */
